<resources>
    <string name="app_name">RC CAR CONTROLLER</string>
    <string name="settings">Settings</string>
    <string name="LEDs">LEDs</string>
    <string name="ledsON">LED ON</string>
    <string name="ledsOFF">LED OFF</string>
    <string name="saveData">Save Data</string>
    <string name="saveTemperature">Save Temperature Data</string>
    <string name="saveDistance">Save Distance Data</string>
    <string name="buzzer">Buzzer</string>
    <string name="up">UP</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="stop">STOP</string>
    <string name="temperature">Temperature</string>
    <string name="velocityMax">Velocity: FULL</string>
    <string name="velocityMin">Velocity: SLOW</string>
    <string name="distance">Distance</string>
    <string name="velocity">Velocity</string>
</resources>
