<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnUp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/up"
        android:layout_above="@+id/btnRight"
        android:layout_toEndOf="@+id/btnLeft" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/left"
        android:layout_below="@+id/btnUp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/down"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btnUp" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/right"
        android:layout_above="@+id/btnDown"
        android:layout_toEndOf="@+id/btnDown" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:text="@string/stop"
        android:layout_below="@+id/btnUp"
        android:layout_alignStart="@+id/btnUp" />

    <TextView
        android:id="@+id/txtViewTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textStyle="bold"
        android:layout_marginStart="97dp"
        android:layout_alignBaseline="@+id/btnUp"
        android:layout_alignBottom="@+id/btnUp"
        android:layout_toEndOf="@+id/btnRight" />


    <TextView
        android:id="@+id/txViewDistancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/btnRight"
        android:layout_alignStart="@+id/txtViewTemperatura"/>

    <EditText
        android:id="@+id/edtTxtTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/txtViewTemperatura"
        android:layout_alignStart="@+id/txtViewTemperatura" />

    <EditText
        android:id="@+id/edtTxtDistancia"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/txViewDistancia"
        android:layout_alignStart="@+id/txViewDistancia" />

</RelativeLayout>
